# trb-supply-monitor

./: .env.example  .gitignore  CHART_CLICK_FEATURE.md  CLAUDE.md  DATA_MANAGEMENT.md  README.md  SUPPLY_DATABASE_INTEGRATION.md  UNIFIED_TIMELINE_SYSTEM.md  active_addresses_0.csv  api.py  app.py  bridgeAbi.json  check_rpc_health.py  docs.html  example_bridge_deposits.csv  example_bridge_withdrawals.csv  export_database.py  migrate_csv_to_db.py  module_tokens.csv  pyproject.toml  reporters-check.json  requirements.txt  run_block_size_collector.py  run_supply_analytics.py  run_unified_collection.py  scheduler.py  setup.sh  test_data_management.py  test_unified_system.py
database_exports/: .gitkeep
src/tellor_supply_analytics/: __init__.py  block_size_alerter.py  block_size_analyzer.py  block_size_collector.py  database.py  estimate_future_height.py  find_layer_block.py  get_active_balances.py  get_active_balances_enhanced.py  supply_collector.py  unified_collector.py
static/css/: unified-style-template.css
static/js/: block-time-analytics.js  dashboard.js  snapshot-detail.js
style_template/: STYLE-TEMPLATE-README.md  template-example.html  unified-style-template.css
templates/: block-time-analytics.html  dashboard.html  snapshot-detail.html
tests/: test_get_bridge_balance.py
